# ws_video_jpg

./: CMakeLists.txt  README.md
src/: main.cpp
